<resources>
    <!--    TODO Strings-->
    <!--    To make that the app could to be international -->
    <string name="app_name">FoodWasteApp</string>
    <string name="title_activity_form_sign_in">Register Form</string>
    <string name="welcome">Welcome</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="join">Join</string>
    <string name="are_you_new_question">Are you new ?</string>
    <string name="im_foundation">I am foundation</string>
    <string name="want_donate_question">Do you want to donate ?</string>
    <string name="donate">Donate</string>

    <string name="filter">Filter</string>
    <string name="food">Food</string>
    <string name="clothes">Clothes</string>
    <string name="furniture">Furniture</string>
    <string name="charity_organization">Charity Organization</string>
    <string name="foundations">Foundations</string>
    <string name="homeless_shelters">Homeless shelters</string>
    <string name="business">Business</string>
    <string name="connected">Connected</string>
    <string name="inactive">Inactive</string>
    <string name="date_to_delivery">Date to delivery</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="hour_to_delivery">Hour to delivery</string>
    <string name="request">Request</string>

    <string name="request_list">Request list</string>
    <string name="empty_list">Empty List</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>

    <string name="what_is_reason">What is the reason?</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="view_verification_code">View Verification code</string>

    <!--    Image content description -->
    <!--    Content description content description attribute links a text description to a control,
        ImageView, or other focusable object that otherwise has no text content.-->
    <string name="logo_content_description" translatable="false">Logo app</string>
    <string name="circular_status_content_description" translatable="false">User state</string>
    <string name="image_foundation_content_description" translatable="false">Image of an foundation</string>
    <string name="icon_person_content_description" translatable="false">Icon Person</string>
    <string name="icon_date_content_description" translatable="false">Icon Date for today</string>
    <string name="icon_time_content_description" translatable="false">Icon time</string>
    <string name="icon_close_content_description" translatable="false">Icon close</string>

    <!--    These strings are use only to example into the development, not translate him-->
    <string name="example_date" translatable="false">Dic 12, 2020</string>
    <string name="example_hour" translatable="false">7:00 AM</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>