<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen16dp"
        android:descendantFocusability="blocksDescendants"
        android:focusableInTouchMode="false"
        tools:context=".activity.user.schedule.ScheduleDonateUser">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_request_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request"
            android:layout_alignParentBottom="true" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_title_foundations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="@string/charity_organization"
                    style="@style/TextAppearance.MaterialComponents.Headline5" />

                <ImageView
                    android:id="@+id/image_foundations"
                    android:layout_width="@dimen/dimen150dp"
                    android:layout_height="@dimen/dimen150dp"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="@dimen/dimen16dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/image_foundation_content_description"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dimen8dp"
                    android:padding="@dimen/dimen8dp"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/image_icon_user_state"
                        android:layout_width="@dimen/dimen24dp"
                        android:layout_height="@dimen/dimen24dp"
                        android:contentDescription="@string/circular_status_content_description"
                        android:background="@drawable/shape_circular_state" />

                    <TextView
                        android:id="@+id/text_user_state"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/connected"
                        android:layout_marginStart="@dimen/dimen16dp"
                        style="@style/TextAppearance.MaterialComponents.Body1" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen1dp"
                    android:layout_marginTop="@dimen/dimen16dp"
                    android:layout_marginBottom="@dimen/dimen16dp"
                    android:background="@color/dividerColor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_to_delivery"
                    android:textStyle="bold"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    android:layout_marginTop="@dimen/dimen10dp"
                    android:layout_marginBottom="@dimen/dimen16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_date_delivery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:text="@string/example_date" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hour_to_delivery"
                    android:textStyle="bold"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/time"
                    android:layout_marginTop="@dimen/dimen10dp"
                    android:layout_marginBottom="@dimen/dimen16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_time_delivery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="time"
                        android:text="@string/example_hour" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>