<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen16dp"
        android:paddingBottom="@dimen/dimen16dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo_content_description"
            android:src="@mipmap/ic_launcher_round" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen12dp"
            android:layout_marginBottom="@dimen/dimen16dp"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            style="?attr/textAppearanceHeadline6"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textStyle="bold"
            android:textColor="@color/primaryText"
            android:gravity="center_horizontal"
            style="?attr/textAppearanceHeadline4"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen16dp"
            android:paddingStart="@dimen/dimen16dp"
            android:paddingEnd="@dimen/dimen8dp"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:endIconDrawable="@drawable/ic_eye_open_black"
                app:endIconCheckable="true"
                app:endIconTint="@drawable/selector_color_password_toggle"
                android:layout_marginTop="@dimen/dimen16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen16dp"
                android:text="@string/sign_in" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen1dp"
            android:layout_margin="@dimen/dimen16dp"
            android:background="@color/dividerColor"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen16dp"
            android:paddingEnd="@dimen/dimen16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/are_you_new_question"
                android:gravity="center_horizontal"
                style="@style/TextAppearance.MaterialComponents.Body1"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_join_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen12dp"
                android:text="@string/join"
                style="?attr/materialButtonOutlinedStyle"/>
            <TextView
                android:id="@+id/text_foundation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/im_foundation"
                android:gravity="center_horizontal"
                android:padding="@dimen/dimen8dp"
                android:textColor="?attr/colorPrimary"
                android:clickable="true"
                android:focusable="true"
                style="@style/TextAppearance.MaterialComponents.Body2"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen1dp"
            android:layout_margin="@dimen/dimen16dp"
            android:background="@color/dividerColor"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/dimen16dp"
            android:paddingEnd="@dimen/dimen16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/want_donate_question"
                android:gravity="center_horizontal"
                style="@style/TextAppearance.MaterialComponents.Body1"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_donate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donate"
                android:textColor="?attr/colorAccent"
                android:layout_marginTop="@dimen/dimen12dp"
                app:rippleColor="@drawable/selector_color_outline_button_accent"
                style="?attr/materialButtonOutlinedStyle"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</layout>