<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.list.ListFoundationActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen12dp"
        android:paddingStart="@dimen/dimen16dp"
        android:paddingEnd="@dimen/dimen8dp"
        android:orientation="vertical">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:strokeColor="@color/dividerColor"
            app:strokeWidth="@dimen/dimen1dp"
            app:cardCornerRadius="@dimen/dimen8dp"
            android:layout_marginTop="@dimen/dimen12dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen16dp">
                <TextView
                    android:id="@+id/text_filter"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/filter"
                    app:layout_constraintTop_toTopOf="parent" />
                <com.google.android.material.chip.ChipGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:layout_marginTop="@dimen/dimen4dp"
                    app:chipSpacingHorizontal="@dimen/dimen16dp"
                    app:singleSelection="true"
                    app:layout_constraintTop_toBottomOf="@id/text_filter">
                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/food"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>
                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/furniture"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>
                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clothes"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>
                </com.google.android.material.chip.ChipGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen16dp">
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_business"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
</layout>